# aoc-2020

./: Cargo.toml
aoc_solutions/: Cargo.toml
aoc_solutions/src/: utils.rs
aoc_solutions/src/solutions/: day06.rs  day10.rs  day11.rs  day14.rs  day15.rs  mod.rs
aoc_solutions/src/templates/: mod.hbs
aoc_solutions/src/utils/: char_grid.rs
src/: main.rs  solution.rs  utils.rs
src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day12.rs  day13.rs  day14.rs  day16.rs  day17.rs  day22.rs  mod.rs
src/templates/: day.hbs
