[package]
authors = ["Joachim Toft <joachimt@spotify.com>"]
edition = "2018"
name = "aoc_solutions"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphlib = {version = "*", features = ["dot"]}
handlebars = "3.5.1"
itertools = "0.9.0"
